# a2-local-lead-engine-public

./: .env.example  .env.operator.example  .gitignore  Makefile  README.md  a2_local.db-journal  alembic.ini  process-optouts.bat  pyproject.toml  run-acquisition.bat  run-forever.bat  run-pipeline.bat  show-email-example.bat
alembic/: env.py
app/: __init__.py  logging_config.py  main.py  settings.py
docs/: ai-judge-policy.md  bounce-processing-policy.md  branch-chain-risk-policy.md  campaign-selection-policy.md  candidate-identity-resolution-policy.md  candidate-quality-policy.md  category-offer-playbooks.md  compliance-policy.md  contact-verification-policy.md  cpanel-domain-email-checklist.md  cpanel-setup-fa.md  cpanel-smtp-sending-policy.md  customer-facing-boundary-policy.md  data-source-policy.md  dedupe-and-merge-policy.md  delivery-bounce-boundary-policy.md  domain-classification-policy.md  draft-precheck-policy.md  duplicate-send-prevention-policy.md  economic-claim-judge-policy.md  economic-value-claim-safety-policy.md  email-claim-usage-policy.md  email-draft-style-policy.md  email-safety-policy.md  email-sending-setup.md  email-similarity-policy.md  evidence-bound-copy-policy.md  evidence-truthfulness-policy.md  final-pre-send-check-policy.md  followup-eligibility-policy.md  free-keyless-run.md  future-copy-evidence-guard.md  future-email-block-policy.md  future-email-claim-permission-policy.md  future-email-personalization-evidence-policy.md  future-phase-boundaries.md  human-like-email-quality-policy.md  human-only-sales-control-policy.md  (+82 more)
(+807 files in other folders)
