[project]
name = "a2-local-lead-engine"
version = "0.1.0"
description = "Safe local lead intelligence and email outreach foundation for Amirali Yaghouti."
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13",
    "fastapi>=0.115",
    "httpx>=0.27",
    "psycopg[binary]>=3.2",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "rich>=13.7",
    "sqlalchemy>=2.0",
    "typer>=0.12",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.11",
    "pytest>=8.3",
    "ruff>=0.6",
]

[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"alembic/versions/*.py" = ["E501", "I001"]
"tests/*.py" = ["E501"]
"app/services/*.py" = ["E501"]
"app/db/models/*.py" = ["E501"]
"app/api/*.py" = ["E501"]
"app/web/*.py" = ["E501"]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
strict = false
ignore_missing_imports = true
